sys/src/cmd/awk/y.output

state 0
	$accept: .program $end 
	opt_pst: .    (28)

	$end  reduce 28 (src line 156)
	error  shift 3
	XBEGIN  reduce 28 (src line 156)
	XEND  reduce 28 (src line 156)
	NL  shift 6
	{  reduce 28 (src line 156)
	(  reduce 28 (src line 156)
	;  shift 7
	/  reduce 28 (src line 156)
	ARG  reduce 28 (src line 156)
	BLTIN  reduce 28 (src line 156)
	FUNC  reduce 28 (src line 156)
	SUB  reduce 28 (src line 156)
	GSUB  reduce 28 (src line 156)
	INDEX  reduce 28 (src line 156)
	MATCHFCN  reduce 28 (src line 156)
	SPRINTF  reduce 28 (src line 156)
	VAR  reduce 28 (src line 156)
	IVAR  reduce 28 (src line 156)
	VARNF  reduce 28 (src line 156)
	CALL  reduce 28 (src line 156)
	NUMBER  reduce 28 (src line 156)
	STRING  reduce 28 (src line 156)
	GETLINE  reduce 28 (src line 156)
	SPLIT  reduce 28 (src line 156)
	SUBSTR  reduce 28 (src line 156)
	+  reduce 28 (src line 156)
	-  reduce 28 (src line 156)
	NOT  reduce 28 (src line 156)
	DECR  reduce 28 (src line 156)
	INCR  reduce 28 (src line 156)
	INDIRECT  reduce 28 (src line 156)
	.  error

	pas  goto 2
	pst  goto 5
	opt_pst  goto 4
	program  goto 1

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  pas.    (1)

	.  reduce 1 (src line 99)


state 3
	program:  error.    (2)

	.  reduce 2 (src line 102)


state 4
	pas:  opt_pst.    (32)
	pas:  opt_pst.pa_stats opt_pst 

	XBEGIN  shift 12
	XEND  shift 13
	{  shift 16
	(  shift 18
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	FUNC  shift 14
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  reduce 32 (src line 167)

	pattern  goto 15
	term  goto 20
	re  goto 19
	pa_pat  goto 10
	pa_stat  goto 9
	pa_stats  goto 8
	reg_expr  goto 24
	var  goto 17
	varname  goto 21
	lbrace  goto 11
	subop  goto 39

state 5
	opt_pst:  pst.    (29)
	pst:  pst.NL 
	pst:  pst.; 

	NL  shift 47
	;  shift 48
	.  reduce 29 (src line 158)


state 6
	pst:  NL.    (87)

	.  reduce 87 (src line 274)


state 7
	pst:  ;.    (88)

	.  reduce 88 (src line 275)


state 8
	pas:  opt_pst pa_stats.opt_pst 
	pa_stats:  pa_stats.opt_pst pa_stat 
	opt_pst: .    (28)

	NL  shift 6
	;  shift 7
	.  reduce 28 (src line 156)

	pst  goto 5
	opt_pst  goto 49

state 9
	pa_stats:  pa_stat.    (44)

	.  reduce 44 (src line 190)


10: shift/reduce conflict (shift 16(0), red'n 35(0)) on {
state 10
	pa_stat:  pa_pat.    (35)
	pa_stat:  pa_pat.lbrace stmtlist } 
	pa_stat:  pa_pat., pa_pat 
	pa_stat:  pa_pat., pa_pat lbrace stmtlist } 

	,  shift 51
	{  shift 16
	.  reduce 35 (src line 176)

	lbrace  goto 50

state 11
	lbrace:  lbrace.NL 
	pa_stat:  lbrace.stmtlist } 

	error  shift 75
	NL  shift 52
	{  shift 16
	(  shift 18
	;  shift 68
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	BREAK  shift 55
	CLOSE  shift 56
	CONTINUE  shift 57
	DELETE  shift 73
	DO  shift 69
	EXIT  shift 59
	FOR  shift 70
	SUB  shift 45
	GSUB  shift 46
	IF  shift 71
	INDEX  shift 33
	MATCHFCN  shift 34
	NEXT  shift 63
	NEXTFILE  shift 64
	PRINT  shift 77
	PRINTF  shift 78
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	RETURN  shift 65
	SPLIT  shift 36
	SUBSTR  shift 40
	WHILE  shift 76
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	pattern  goto 74
	term  goto 20
	re  goto 19
	reg_expr  goto 24
	simple_stmt  goto 66
	stmt  goto 54
	stmtlist  goto 53
	var  goto 17
	varname  goto 21
	for  goto 60
	if  goto 61
	while  goto 67
	do  goto 58
	lbrace  goto 62
	subop  goto 39
	print  goto 72

state 12
	pa_stat:  XBEGIN.lbrace stmtlist } 

	{  shift 16
	.  error

	lbrace  goto 79

state 13
	pa_stat:  XEND.lbrace stmtlist } 

	{  shift 16
	.  error

	lbrace  goto 80

state 14
	pa_stat:  FUNC.funcname ( varlist rparen $$42 lbrace stmtlist } 

	VAR  shift 82
	CALL  shift 83
	.  error

	funcname  goto 81

15: shift/reduce conflict (shift 101(11), red'n 34(0)) on (
15: shift/reduce conflict (shift 42(8), red'n 34(0)) on ARG
15: shift/reduce conflict (shift 28(8), red'n 34(0)) on BLTIN
15: shift/reduce conflict (shift 45(10), red'n 34(0)) on SUB
15: shift/reduce conflict (shift 46(9), red'n 34(0)) on GSUB
15: shift/reduce conflict (shift 33(9), red'n 34(0)) on INDEX
15: shift/reduce conflict (shift 34(9), red'n 34(0)) on MATCHFCN
15: shift/reduce conflict (shift 37(10), red'n 34(0)) on SPRINTF
15: shift/reduce conflict (shift 41(11), red'n 34(0)) on VAR
15: shift/reduce conflict (shift 22(11), red'n 34(0)) on IVAR
15: shift/reduce conflict (shift 43(11), red'n 34(0)) on VARNF
15: shift/reduce conflict (shift 29(8), red'n 34(0)) on CALL
15: shift/reduce conflict (shift 35(9), red'n 34(0)) on NUMBER
15: shift/reduce conflict (shift 38(10), red'n 34(0)) on STRING
15: shift/reduce conflict (shift 32(6), red'n 34(0)) on GETLINE
15: shift/reduce conflict (shift 36(10), red'n 34(0)) on SPLIT
15: shift/reduce conflict (shift 40(10), red'n 34(0)) on SUBSTR
15: shift/reduce conflict (shift 27(13), red'n 34(0)) on +
15: shift/reduce conflict (shift 26(13), red'n 34(0)) on -
15: shift/reduce conflict (shift 99(15), red'n 34(0)) on NOT
15: shift/reduce conflict (shift 30(17), red'n 34(0)) on DECR
15: shift/reduce conflict (shift 31(17), red'n 34(0)) on INCR
15: shift/reduce conflict (shift 23(18), red'n 34(0)) on INDIRECT
state 15
	pa_pat:  pattern.    (34)
	pattern:  pattern.? pattern : pattern 
	pattern:  pattern.bor pattern 
	pattern:  pattern.and pattern 
	pattern:  pattern.EQ pattern 
	pattern:  pattern.GE pattern 
	pattern:  pattern.GT pattern 
	pattern:  pattern.LE pattern 
	pattern:  pattern.LT pattern 
	pattern:  pattern.NE pattern 
	pattern:  pattern.MATCHOP reg_expr 
	pattern:  pattern.MATCHOP pattern 
	pattern:  pattern.IN varname 
	pattern:  pattern.| GETLINE var 
	pattern:  pattern.| GETLINE 
	pattern:  pattern.term 

	(  shift 101
	|  shift 95
	MATCHOP  shift 93
	AND  shift 98
	BOR  shift 97
	EQ  shift 87
	GE  shift 88
	GT  shift 89
	LE  shift 90
	LT  shift 91
	NE  shift 92
	IN  shift 94
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	?  shift 84
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 99
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  reduce 34 (src line 172)

	term  goto 96
	var  goto 100
	varname  goto 21
	and  goto 86
	bor  goto 85
	subop  goto 39

state 16
	lbrace:  {.    (22)

	.  reduce 22 (src line 143)


17: shift/reduce conflict (shift 103(17), red'n 173(0)) on DECR
17: shift/reduce conflict (shift 104(17), red'n 173(0)) on INCR
state 17
	pattern:  var.ASGNOP pattern 
	term:  var.DECR 
	term:  var.INCR 
	term:  var.    (173)

	ASGNOP  shift 102
	DECR  shift 103
	INCR  shift 104
	.  reduce 173 (src line 418)


state 18
	pattern:  (.plist ) IN varname 
	term:  (.pattern ) 

	(  shift 18
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	pattern  goto 106
	plist  goto 105
	term  goto 20
	re  goto 19
	reg_expr  goto 24
	var  goto 17
	varname  goto 21
	subop  goto 39

state 19
	pattern:  re.    (76)

	.  reduce 76 (src line 250)


20: shift/reduce conflict (shift 107(14), red'n 77(0)) on /
20: shift/reduce conflict (shift 108(13), red'n 77(0)) on +
20: shift/reduce conflict (shift 109(13), red'n 77(0)) on -
state 20
	pattern:  term.    (77)
	term:  term./ ASGNOP term 
	term:  term.+ term 
	term:  term.- term 
	term:  term.* term 
	term:  term./ term 
	term:  term.% term 
	term:  term.POWER term 

	/  shift 107
	+  shift 108
	-  shift 109
	*  shift 110
	%  shift 111
	POWER  shift 112
	.  reduce 77 (src line 251)


state 21
	var:  varname.    (174)
	var:  varname.[ patlist ] 

	[  shift 113
	.  reduce 174 (src line 421)


state 22
	var:  IVAR.    (176)

	.  reduce 176 (src line 424)


state 23
	var:  INDIRECT.term 

	(  shift 101
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 99
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	term  goto 114
	var  goto 100
	varname  goto 21
	subop  goto 39

state 24
	re:  reg_expr.    (93)

	.  reduce 93 (src line 282)


state 25
	re:  NOT.re 
	term:  NOT.term 

	(  shift 101
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	term  goto 116
	re  goto 115
	reg_expr  goto 24
	var  goto 100
	varname  goto 21
	subop  goto 39

state 26
	term:  -.term 

	(  shift 101
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 99
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	term  goto 117
	var  goto 100
	varname  goto 21
	subop  goto 39

state 27
	term:  +.term 

	(  shift 101
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 99
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	term  goto 118
	var  goto 100
	varname  goto 21
	subop  goto 39

state 28
	term:  BLTIN.( ) 
	term:  BLTIN.( patlist ) 
	term:  BLTIN.    (145)

	(  shift 119
	.  reduce 145 (src line 367)


state 29
	term:  CALL.( ) 
	term:  CALL.( patlist ) 

	(  shift 120
	.  error


state 30
	term:  DECR.var 

	ARG  shift 42
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	INDIRECT  shift 23
	.  error

	var  goto 121
	varname  goto 21

state 31
	term:  INCR.var 

	ARG  shift 42
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	INDIRECT  shift 23
	.  error

	var  goto 122
	varname  goto 21

state 32
	term:  GETLINE.var LT term 
	term:  GETLINE.LT term 
	term:  GETLINE.var 
	term:  GETLINE.    (155)

	LT  shift 124
	ARG  shift 42
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	INDIRECT  shift 23
	.  reduce 155 (src line 377)

	var  goto 123
	varname  goto 21

state 33
	term:  INDEX.( pattern comma pattern ) 
	term:  INDEX.( pattern comma reg_expr ) 

	(  shift 125
	.  error


state 34
	term:  MATCHFCN.( pattern comma reg_expr ) 
	term:  MATCHFCN.( pattern comma pattern ) 

	(  shift 126
	.  error


state 35
	term:  NUMBER.    (161)

	.  reduce 161 (src line 391)


state 36
	term:  SPLIT.( pattern comma varname comma pattern ) 
	term:  SPLIT.( pattern comma varname comma reg_expr ) 
	term:  SPLIT.( pattern comma varname ) 

	(  shift 127
	.  error


state 37
	term:  SPRINTF.( patlist ) 

	(  shift 128
	.  error


state 38
	term:  STRING.    (166)

	.  reduce 166 (src line 399)


state 39
	term:  subop.( reg_expr comma pattern ) 
	term:  subop.( pattern comma pattern ) 
	term:  subop.( reg_expr comma pattern comma var ) 
	term:  subop.( pattern comma pattern comma var ) 

	(  shift 129
	.  error


state 40
	term:  SUBSTR.( pattern comma pattern comma pattern ) 
	term:  SUBSTR.( pattern comma pattern ) 

	(  shift 130
	.  error


state 41
	varname:  VAR.    (181)

	.  reduce 181 (src line 436)


state 42
	varname:  ARG.    (182)

	.  reduce 182 (src line 438)


state 43
	varname:  VARNF.    (183)

	.  reduce 183 (src line 439)


state 44
	reg_expr:  /.$$95 REGEXPR / 
	$$95: .    (95)

	.  reduce 95 (src line 288)

	$$95  goto 131

state 45
	subop:  SUB.    (131)

	.  reduce 131 (src line 350)


state 46
	subop:  GSUB.    (132)

	.  reduce 132 (src line 351)


state 47
	pst:  pst NL.    (89)

	.  reduce 89 (src line 275)


state 48
	pst:  pst ;.    (90)

	.  reduce 90 (src line 275)


state 49
	pas:  opt_pst pa_stats opt_pst.    (33)
	pa_stats:  pa_stats opt_pst.pa_stat 

	XBEGIN  shift 12
	XEND  shift 13
	{  shift 16
	(  shift 18
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	FUNC  shift 14
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  reduce 33 (src line 169)

	pattern  goto 15
	term  goto 20
	re  goto 19
	pa_pat  goto 10
	pa_stat  goto 132
	reg_expr  goto 24
	var  goto 17
	varname  goto 21
	lbrace  goto 11
	subop  goto 39

state 50
	lbrace:  lbrace.NL 
	pa_stat:  pa_pat lbrace.stmtlist } 

	error  shift 75
	NL  shift 52
	{  shift 16
	(  shift 18
	;  shift 68
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	BREAK  shift 55
	CLOSE  shift 56
	CONTINUE  shift 57
	DELETE  shift 73
	DO  shift 69
	EXIT  shift 59
	FOR  shift 70
	SUB  shift 45
	GSUB  shift 46
	IF  shift 71
	INDEX  shift 33
	MATCHFCN  shift 34
	NEXT  shift 63
	NEXTFILE  shift 64
	PRINT  shift 77
	PRINTF  shift 78
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	RETURN  shift 65
	SPLIT  shift 36
	SUBSTR  shift 40
	WHILE  shift 76
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	pattern  goto 74
	term  goto 20
	re  goto 19
	reg_expr  goto 24
	simple_stmt  goto 66
	stmt  goto 54
	stmtlist  goto 133
	var  goto 17
	varname  goto 21
	for  goto 60
	if  goto 61
	while  goto 67
	do  goto 58
	lbrace  goto 62
	subop  goto 39
	print  goto 72

state 51
	pa_stat:  pa_pat ,.pa_pat 
	pa_stat:  pa_pat ,.pa_pat lbrace stmtlist } 

	(  shift 18
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	pattern  goto 15
	term  goto 20
	re  goto 19
	pa_pat  goto 134
	reg_expr  goto 24
	var  goto 17
	varname  goto 21
	subop  goto 39

state 52
	lbrace:  lbrace NL.    (23)

	.  reduce 23 (src line 144)


state 53
	pa_stat:  lbrace stmtlist.} 
	stmtlist:  stmtlist.stmt 

	error  shift 75
	{  shift 16
	(  shift 18
	;  shift 68
	/  shift 44
	}  shift 135
	ARG  shift 42
	BLTIN  shift 28
	BREAK  shift 55
	CLOSE  shift 56
	CONTINUE  shift 57
	DELETE  shift 73
	DO  shift 69
	EXIT  shift 59
	FOR  shift 70
	SUB  shift 45
	GSUB  shift 46
	IF  shift 71
	INDEX  shift 33
	MATCHFCN  shift 34
	NEXT  shift 63
	NEXTFILE  shift 64
	PRINT  shift 77
	PRINTF  shift 78
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	RETURN  shift 65
	SPLIT  shift 36
	SUBSTR  shift 40
	WHILE  shift 76
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	pattern  goto 74
	term  goto 20
	re  goto 19
	reg_expr  goto 24
	simple_stmt  goto 66
	stmt  goto 136
	var  goto 17
	varname  goto 21
	for  goto 60
	if  goto 61
	while  goto 67
	do  goto 58
	lbrace  goto 62
	subop  goto 39
	print  goto 72

state 54
	stmtlist:  stmt.    (129)

	.  reduce 129 (src line 345)


state 55
	stmt:  BREAK.st 

	NL  shift 140
	;  shift 139
	.  error

	st  goto 137
	nl  goto 138

state 56
	stmt:  CLOSE.pattern st 

	(  shift 18
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	pattern  goto 141
	term  goto 20
	re  goto 19
	reg_expr  goto 24
	var  goto 17
	varname  goto 21
	subop  goto 39

state 57
	stmt:  CONTINUE.st 

	NL  shift 140
	;  shift 139
	.  error

	st  goto 142
	nl  goto 138

state 58
	do:  do.NL 
	stmt:  do.$$112 stmt $$113 WHILE ( pattern ) st 
	$$112: .    (112)

	NL  shift 143
	.  reduce 112 (src line 324)

	$$112  goto 144

state 59
	stmt:  EXIT.pattern st 
	stmt:  EXIT.st 

	NL  shift 140
	(  shift 18
	;  shift 139
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	pattern  goto 145
	term  goto 20
	re  goto 19
	reg_expr  goto 24
	var  goto 17
	varname  goto 21
	st  goto 146
	nl  goto 138
	subop  goto 39

state 60
	stmt:  for.    (117)

	.  reduce 117 (src line 328)


state 61
	stmt:  if.stmt else stmt 
	stmt:  if.stmt 

	error  shift 75
	{  shift 16
	(  shift 18
	;  shift 68
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	BREAK  shift 55
	CLOSE  shift 56
	CONTINUE  shift 57
	DELETE  shift 73
	DO  shift 69
	EXIT  shift 59
	FOR  shift 70
	SUB  shift 45
	GSUB  shift 46
	IF  shift 71
	INDEX  shift 33
	MATCHFCN  shift 34
	NEXT  shift 63
	NEXTFILE  shift 64
	PRINT  shift 77
	PRINTF  shift 78
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	RETURN  shift 65
	SPLIT  shift 36
	SUBSTR  shift 40
	WHILE  shift 76
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	pattern  goto 74
	term  goto 20
	re  goto 19
	reg_expr  goto 24
	simple_stmt  goto 66
	stmt  goto 147
	var  goto 17
	varname  goto 21
	for  goto 60
	if  goto 61
	while  goto 67
	do  goto 58
	lbrace  goto 62
	subop  goto 39
	print  goto 72

state 62
	lbrace:  lbrace.NL 
	stmt:  lbrace.stmtlist rbrace 

	error  shift 75
	NL  shift 52
	{  shift 16
	(  shift 18
	;  shift 68
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	BREAK  shift 55
	CLOSE  shift 56
	CONTINUE  shift 57
	DELETE  shift 73
	DO  shift 69
	EXIT  shift 59
	FOR  shift 70
	SUB  shift 45
	GSUB  shift 46
	IF  shift 71
	INDEX  shift 33
	MATCHFCN  shift 34
	NEXT  shift 63
	NEXTFILE  shift 64
	PRINT  shift 77
	PRINTF  shift 78
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	RETURN  shift 65
	SPLIT  shift 36
	SUBSTR  shift 40
	WHILE  shift 76
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	pattern  goto 74
	term  goto 20
	re  goto 19
	reg_expr  goto 24
	simple_stmt  goto 66
	stmt  goto 54
	stmtlist  goto 148
	var  goto 17
	varname  goto 21
	for  goto 60
	if  goto 61
	while  goto 67
	do  goto 58
	lbrace  goto 62
	subop  goto 39
	print  goto 72

state 63
	stmt:  NEXT.st 

	NL  shift 140
	;  shift 139
	.  error

	st  goto 149
	nl  goto 138

state 64
	stmt:  NEXTFILE.st 

	NL  shift 140
	;  shift 139
	.  error

	st  goto 150
	nl  goto 138

state 65
	stmt:  RETURN.pattern st 
	stmt:  RETURN.st 

	NL  shift 140
	(  shift 18
	;  shift 139
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	pattern  goto 151
	term  goto 20
	re  goto 19
	reg_expr  goto 24
	var  goto 17
	varname  goto 21
	st  goto 152
	nl  goto 138
	subop  goto 39

state 66
	stmt:  simple_stmt.st 

	NL  shift 140
	;  shift 139
	.  error

	st  goto 153
	nl  goto 138

state 67
	stmt:  while.$$126 stmt 
	$$126: .    (126)

	.  reduce 126 (src line 341)

	$$126  goto 154

state 68
	stmt:  ;.opt_nl 
	opt_nl: .    (26)

	NL  shift 140
	.  reduce 26 (src line 151)

	nl  goto 156
	opt_nl  goto 155

state 69
	do:  DO.    (9)

	.  reduce 9 (src line 117)


state 70
	for:  FOR.( opt_simple_stmt ; opt_nl pattern ; opt_nl opt_simple_stmt rparen $$13 stmt 
	for:  FOR.( opt_simple_stmt ; ; opt_nl opt_simple_stmt rparen $$15 stmt 
	for:  FOR.( varname IN varname rparen $$17 stmt 

	(  shift 157
	.  error


state 71
	if:  IF.( pattern rparen 

	(  shift 158
	.  error


state 72
	simple_stmt:  print.prarg | term 
	simple_stmt:  print.prarg APPEND term 
	simple_stmt:  print.prarg GT term 
	simple_stmt:  print.prarg 
	prarg: .    (82)

	(  shift 161
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  reduce 82 (src line 264)

	ppattern  goto 162
	pplist  goto 160
	prarg  goto 159
	term  goto 165
	re  goto 164
	reg_expr  goto 24
	var  goto 163
	varname  goto 21
	subop  goto 39

state 73
	simple_stmt:  DELETE.varname [ patlist ] 
	simple_stmt:  DELETE.varname 

	ARG  shift 42
	VAR  shift 41
	VARNF  shift 43
	.  error

	varname  goto 166

state 74
	pattern:  pattern.? pattern : pattern 
	pattern:  pattern.bor pattern 
	pattern:  pattern.and pattern 
	pattern:  pattern.EQ pattern 
	pattern:  pattern.GE pattern 
	pattern:  pattern.GT pattern 
	pattern:  pattern.LE pattern 
	pattern:  pattern.LT pattern 
	pattern:  pattern.NE pattern 
	pattern:  pattern.MATCHOP reg_expr 
	pattern:  pattern.MATCHOP pattern 
	pattern:  pattern.IN varname 
	pattern:  pattern.| GETLINE var 
	pattern:  pattern.| GETLINE 
	pattern:  pattern.term 
	simple_stmt:  pattern.    (105)

	(  shift 101
	|  shift 95
	MATCHOP  shift 93
	AND  shift 98
	BOR  shift 97
	EQ  shift 87
	GE  shift 88
	GT  shift 89
	LE  shift 90
	LT  shift 91
	NE  shift 92
	IN  shift 94
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	?  shift 84
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 99
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  reduce 105 (src line 309)

	term  goto 96
	var  goto 100
	varname  goto 21
	and  goto 86
	bor  goto 85
	subop  goto 39

state 75
	simple_stmt:  error.    (106)

	.  reduce 106 (src line 310)


state 76
	while:  WHILE.( pattern rparen 

	(  shift 167
	.  error


state 77
	print:  PRINT.    (85)

	.  reduce 85 (src line 270)


state 78
	print:  PRINTF.    (86)

	.  reduce 86 (src line 271)


state 79
	lbrace:  lbrace.NL 
	pa_stat:  XBEGIN lbrace.stmtlist } 
